# eerie-yolo11

./: .gitignore  Cargo.toml  README.md  create_cargo_config.py
.cargo/: config.toml
src/: main.rs
